--- a/homepage.html
+++ b/homepage.html
@@ -8,10 +8,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>StudioX interview task</title>
+
+    <script src="script-map.js"></script>
   </head>
   <body>
     <div class="lang-dropdown" onclick="showLanguageBar()">
-      <a href="" class="lang" >БГ</a>
+      <h3 href="" class="lang">БГ</h3>
       <svg
         class="lang-open-icon"
         xmlns="http://www.w3.org/2000/svg"
@@ -42,15 +44,23 @@
           fill="white"
         />
       </svg>
-      <div class="lang-container">
-        <a href="">Български език</a>
-        <hr/>
-        <a href="">English</a>
-        <hr/>
-        <a href="">Hindi</a>
-      </div>
+      <ul class="lang-container">
+        <li class="lang-non-hover">
+          <a class="languages" href="">Български език</a>
+          <hr />
+        </li>
+        <li class="lang-hover">
+          <a class="languages" href="">English</a>
+          <hr />
+        </li>
+
+        <li class="lang-hover">
+          <a class="languages" href="">Hindi</a>
+          <hr class="hidden-line" />
+        </li>
+      </ul>
     </div>
-    
+
     <header>
       <svg
         class="logo"
@@ -68,102 +78,114 @@
         />
       </svg>
       <div class="nav-bar">
-        <a class="nav-link" href="#beginning">Начало</a>
-        <a class="nav-link" href="#magic">Магията</a>
-        <a class="nav-link" href="#where">Къде?</a>
-        <a class="nav-link" href="#sign-up">Запиши се</a>
-        <a class="nav-link" href="#footer">Футър</a>
-        <div class="line"></div>
-        <div class="menu-bar" onclick="showMenu()">
-          <svg
-            class="menu-icon"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M12.5 18.49C13.88 18.49 15 19.61 15 20.99C15 22.371 13.88 23.49 12.5 23.49C11.12 23.49 10 22.371 10 20.99C10 19.61 11.12 18.49 12.5 18.49ZM12.5 9.48999C13.88 9.48999 15 10.61 15 11.99C15 13.371 13.88 14.49 12.5 14.49C11.12 14.49 10 13.371 10 11.99C10 10.61 11.12 9.48999 12.5 9.48999ZM12.5 0.48999C13.88 0.48999 15 1.60999 15 2.98999C15 4.37099 13.88 5.48999 12.5 5.48999C11.12 5.48999 10 4.37199 10 2.98999C10 1.60999 11.12 0.48999 12.5 0.48999Z"
-              fill="black"
-            />
-          </svg>
-          <svg
-            class="close-menu-icon"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="25"
-            viewBox="0 0 24 25"
-            fill="none"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M3.41589 3.965C4.05689 3.324 5.09689 3.324 5.73889 3.965L12.0939 10.321L18.1299 4.286C18.7719 3.645 19.8119 3.645 20.4529 4.286C21.0949 4.928 21.0949 5.968 20.4529 6.61L14.4169 12.644L20.4529 18.68C21.0569 19.284 21.0929 20.24 20.5599 20.886L20.4529 21.003C19.8119 21.645 18.7719 21.645 18.1299 21.003L12.0939 14.967L5.73889 21.324C5.09689 21.965 4.05689 21.965 3.41589 21.324C2.77389 20.682 2.77389 19.642 3.41589 19.001L9.77089 12.644L3.41589 6.29C2.81189 5.686 2.77589 4.729 3.30889 4.084L3.41589 3.965Z"
-              fill="black"
-            />
-          </svg>
-          <div class="menu-text">
-            <a href="">Информация</a>
-            <hr class="menu-line" />
-            <a href="">Текстова страница</a>
-            <hr class="menu-line" />
-            <a href="">Екстри</a>
-          </div>
-        </div>
-
-        <div class="search-container">
-          <form class="search-form" action="#">
-            <input
-              class="search-input"
-              type="text"
-              placeholder="Търсете в сайта"
-              name="search"
-            />
-            <div class="search-close" onclick="showSearchForm()">
-              <svg
-                class="close-icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-                fill="none"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M2.27734 2.6962C2.70467 2.26032 3.39801 2.26032 3.82601 2.6962L8.06267 7.01828L12.0867 2.91448C12.5147 2.4786 13.208 2.4786 13.6353 2.91448C14.0633 3.35104 14.0633 4.05824 13.6353 4.4948L9.61134 8.59792L13.6353 12.7024C14.038 13.1131 14.062 13.7632 13.7067 14.2025L13.6353 14.282C13.208 14.7186 12.5147 14.7186 12.0867 14.282L8.06267 10.1776L3.82601 14.5003C3.39801 14.9362 2.70467 14.9362 2.27734 14.5003C1.84934 14.0638 1.84934 13.3566 2.27734 12.9207L6.51401 8.59792L2.27734 4.2772C1.87467 3.86648 1.85067 3.21572 2.20601 2.77712L2.27734 2.6962Z"
-                  fill="black"
-                />
-              </svg>
+        <a href="#beginning">Начало</a>
+        <a href="#magic">Магията</a>
+        <a href="#where">Къде?</a>
+        <a class="sign-up" href="#sign-up">Запиши се</a>
+        <a class="footer" href="#footer">Футър</a>
+        <div class="header-container">
+          <div class="header-line"></div>
+          <div class="menu-bar" onclick="showMenu()">
+            <svg
+              class="menu-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12.5 18.49C13.88 18.49 15 19.61 15 20.99C15 22.371 13.88 23.49 12.5 23.49C11.12 23.49 10 22.371 10 20.99C10 19.61 11.12 18.49 12.5 18.49ZM12.5 9.48999C13.88 9.48999 15 10.61 15 11.99C15 13.371 13.88 14.49 12.5 14.49C11.12 14.49 10 13.371 10 11.99C10 10.61 11.12 9.48999 12.5 9.48999ZM12.5 0.48999C13.88 0.48999 15 1.60999 15 2.98999C15 4.37099 13.88 5.48999 12.5 5.48999C11.12 5.48999 10 4.37199 10 2.98999C10 1.60999 11.12 0.48999 12.5 0.48999Z"
+                fill="black"
+              />
+            </svg>
+            <svg
+              class="close-menu-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="25"
+              viewBox="0 0 24 25"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3.41589 3.965C4.05689 3.324 5.09689 3.324 5.73889 3.965L12.0939 10.321L18.1299 4.286C18.7719 3.645 19.8119 3.645 20.4529 4.286C21.0949 4.928 21.0949 5.968 20.4529 6.61L14.4169 12.644L20.4529 18.68C21.0569 19.284 21.0929 20.24 20.5599 20.886L20.4529 21.003C19.8119 21.645 18.7719 21.645 18.1299 21.003L12.0939 14.967L5.73889 21.324C5.09689 21.965 4.05689 21.965 3.41589 21.324C2.77389 20.682 2.77389 19.642 3.41589 19.001L9.77089 12.644L3.41589 6.29C2.81189 5.686 2.77589 4.729 3.30889 4.084L3.41589 3.965Z"
+                fill="black"
+              />
+            </svg>
+            <div class="menu-text">
+              <a class="hidden" href="#beginning">Начало</a>
+              <hr class="menu-line hidden" />
+              <a class="hidden magic" href="#magic">Магията</a>
+              <hr class="menu-line hidden magic" />
+              <a class="hidden" href="#where">Къде?</a>
+              <hr class="menu-line hidden" />
+              <a class="hidden" href="#sign-up">Запиши се</a>
+              <hr class="menu-line hidden" />
+              <a class="hidden footer-menu" href="#footer">Футър</a>
+              <hr class="menu-line hidden footer-menu" />
+              <a href="">Информация</a>
+              <hr class="menu-line" />
+              <a href="">Текстова страница</a>
+              <hr class="menu-line" />
+              <a href="">Екстри</a>
             </div>
-            <div class="search-bar" onclick="showSearchForm()">
-              <svg
-                class="search-icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-              >
-                <g clip-path="url(#clip0_3_597)">
+          </div>
+
+          <div class="search-container">
+            <form class="search-form" action="#">
+              <input
+                class="search-input"
+                type="text"
+                placeholder="Търсете в сайта"
+                name="search"
+              />
+              <div class="search-close" onclick="showSearchForm()">
+                <svg
+                  class="close-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                >
                   <path
                     fill-rule="evenodd"
                     clip-rule="evenodd"
-                    d="M18.3151 4.444C20.3881 7.546 20.5221 11.455 18.8691 14.626L22.7331 18.491C23.5361 19.239 23.8661 20.365 23.5951 21.428C23.3231 22.491 22.4931 23.321 21.4301 23.593C20.3671 23.864 19.2411 23.533 18.4931 22.731L14.6281 18.866C13.2131 19.605 11.6281 20.001 10.0031 20.001C5.23305 20.002 1.12505 16.633 0.193052 11.954C-0.737948 7.274 1.76505 2.589 6.17305 0.763C10.5801 -1.064 15.6631 0.479 18.3151 4.444ZM10.0031 2C6.18605 2.008 2.90705 4.71 2.17005 8.456C1.43305 12.201 3.44505 15.945 6.97405 17.398C9.38305 18.389 12.0401 18.125 14.1571 16.848C14.1901 16.819 14.2261 16.794 14.2631 16.77C14.7691 16.453 15.2391 16.08 15.6631 15.66L15.9091 15.4C16.2301 15.046 16.5191 14.665 16.7731 14.26C16.8011 14.215 16.833 14.173 16.8661 14.134C18.7661 10.994 18.2861 6.94 15.6631 4.33C14.1581 2.837 12.1231 2.003 10.0031 2.01V2Z"
-                    fill="white"
+                    d="M2.27734 2.6962C2.70467 2.26032 3.39801 2.26032 3.82601 2.6962L8.06267 7.01828L12.0867 2.91448C12.5147 2.4786 13.208 2.4786 13.6353 2.91448C14.0633 3.35104 14.0633 4.05824 13.6353 4.4948L9.61134 8.59792L13.6353 12.7024C14.038 13.1131 14.062 13.7632 13.7067 14.2025L13.6353 14.282C13.208 14.7186 12.5147 14.7186 12.0867 14.282L8.06267 10.1776L3.82601 14.5003C3.39801 14.9362 2.70467 14.9362 2.27734 14.5003C1.84934 14.0638 1.84934 13.3566 2.27734 12.9207L6.51401 8.59792L2.27734 4.2772C1.87467 3.86648 1.85067 3.21572 2.20601 2.77712L2.27734 2.6962Z"
+                    fill="black"
                   />
-                </g>
-                <defs>
-                  <clipPath id="clip0_3_597">
-                    <rect width="24" height="24" fill="white" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </div>
-          </form>
+                </svg>
+              </div>
+              <div class="search-bar" onclick="showSearchForm()">
+                <svg
+                  class="search-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                >
+                  <g clip-path="url(#clip0_3_597)">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M18.3151 4.444C20.3881 7.546 20.5221 11.455 18.8691 14.626L22.7331 18.491C23.5361 19.239 23.8661 20.365 23.5951 21.428C23.3231 22.491 22.4931 23.321 21.4301 23.593C20.3671 23.864 19.2411 23.533 18.4931 22.731L14.6281 18.866C13.2131 19.605 11.6281 20.001 10.0031 20.001C5.23305 20.002 1.12505 16.633 0.193052 11.954C-0.737948 7.274 1.76505 2.589 6.17305 0.763C10.5801 -1.064 15.6631 0.479 18.3151 4.444ZM10.0031 2C6.18605 2.008 2.90705 4.71 2.17005 8.456C1.43305 12.201 3.44505 15.945 6.97405 17.398C9.38305 18.389 12.0401 18.125 14.1571 16.848C14.1901 16.819 14.2261 16.794 14.2631 16.77C14.7691 16.453 15.2391 16.08 15.6631 15.66L15.9091 15.4C16.2301 15.046 16.5191 14.665 16.7731 14.26C16.8011 14.215 16.833 14.173 16.8661 14.134C18.7661 10.994 18.2861 6.94 15.6631 4.33C14.1581 2.837 12.1231 2.003 10.0031 2.01V2Z"
+                      fill="white"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_3_597">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </div>
+            </form>
+          </div>
         </div>
         <script src="script.js"></script>
       </div>
@@ -171,12 +193,99 @@
     <main>
       <div class="container">
         <section class="hero-container" id="beginning">
-          <img src="./hero-image.jpeg" alt="bunny" />
+          <img class="hero-img" src="./hero-image.jpeg" alt="bunny" />
           <h2 class="hero-title">Think you have what it takes?</h2>
         </section>
 
-        <section class="map" id="where">
+        <section class="where" id="where">
           <h2 class="where-title">Къде сме? Навсякъде</h2>
+          <div class="filter-container">
+            <p class="filter-title1">Филтрирай:</p>
+            <div class="filter" onclick="filterMarkers('webDesign')">
+              <svg
+                class="filter-circle"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle cx="12" cy="12" r="12" fill="black" />
+              </svg>
+              <p class="filter-title">Уебдизайн</p>
+            </div>
+            <div class="filter" onclick="filterMarkers('frontEnd')">
+              <svg
+                class="filter-circle"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle cx="12" cy="12" r="12" fill="black" />
+              </svg>
+              <p class="filter-title">Фронт енд</p>
+            </div>
+            <div class="filter" onclick="filterMarkers('backEnd')">
+              <svg
+                class="filter-circle"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle cx="12" cy="12" r="12" fill="black" />
+              </svg>
+              <p class="filter-title">Бек енд</p>
+            </div>
+            <div class="filter" onclick="filterMarkers('consultations')">
+              <svg
+                class="filter-circle"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle cx="12" cy="12" r="12" fill="black" />
+              </svg>
+              <p class="filter-title">Консултации</p>
+            </div>
+            <div class="filter" onclick="filterMarkers('branding')">
+              <svg
+                class="filter-circle"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <circle cx="12" cy="12" r="12" fill="black" />
+              </svg>
+              <p class="filter-title">Брандинг</p>
+            </div>
+          </div>
+          <div class="map-container">
+            <div id="map"></div>
+            <script
+              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtfR-x4YdyaHpBOJ8Oq2K0-beIhQRScC0&callback=initMap"
+              async
+            ></script>
+            <div class="location-container">
+              <h3 class="choose-location">Избери локация</h3>
+              <div class="location-line"></div>
+              <div class="locatoin-title-container">
+                <p class="location-title">Локация 1</p>
+                <p class="location-title">Локация 2</p>
+                <p class="location-title">Локация 3</p>
+                <p class="location-title">Локация 4</p>
+                <p class="location-title">Локация 5</p>
+                <p class="location-title">Локация 6</p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
